--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine on
 RewriteBase /
-RewriteCond $1 !^(index\.php|css|fonts|img|js|robots\.txt)
+RewriteCond $1 !^(index\.php|css|fonts|img|js|assets|robots\.txt)
 RewriteRule ^(.*)$ index.php/$1 [L]
